fixed footer alignment and other styles

--- a/css/collections.css
+++ b/css/collections.css
@@ -162,7 +162,7 @@ p a:hover {
 .info-footer {
     display: block;
     width: 100%;
-    height: 470px;
+    height: 430px;
     background-color: #212121;
 }
   
@@ -172,7 +172,7 @@ p a:hover {
     justify-content: center;
     margin: auto;
     width: 300px;
-    height: 150px;
+    height: 130px;
     padding-top: 20px;
     fill: white;
 }
@@ -196,7 +196,6 @@ p a:hover {
     background: cover;
     color: white;
     background-color: #3b5998;
-    border-radius: 50px;
     width: 20px;
     height: 20px;
     align-items: center;
@@ -208,7 +207,6 @@ p a:hover {
     background: #55acee;
     background-size: fill;
     color: white;
-    border-radius: 50px;
     width: 20px;
     height: 20px;
     align-items: center;
@@ -220,7 +218,6 @@ p a:hover {
     color: white;
     background-size: fill;
     color: white;
-    border-radius: 50px;
     width: 20px;
     height: 20px;
     align-items: center;
@@ -232,7 +229,6 @@ p a:hover {
     color: white;
     background-size: fill;
     color: white;
-    border-radius: 50px;
     width: 20px;
     height: 20px;
     align-items: center;
